第二次迭代第一次提交 重构数据结构和编辑器模块，完善本地存储和API服务
- 更新数据模型，定义小说、章节、场景之间的关系
- 重构EditorRepository和LocalStorageService，提高数据处理能力
- 优化编辑器设置和内容管理逻辑
- 添加字数统计和内容分析工具
- 完善小说列表和编辑器模块的状态管理

--- a/AINoval/lib/l10n/app_zh.arb
+++ b/AINoval/lib/l10n/app_zh.arb
@@ -30,5 +30,11 @@
   "paragraphs": "段落数",
   "readTime": "预计阅读时间",
   "minutes": "分钟",
-  "close": "关闭"
+  "close": "关闭",
+  "chatWithAI": "与AI聊天",
+  "sendMessage": "发送消息",
+  "typeMessage": "输入消息...",
+  "newChat": "新对话",
+  "loadingChat": "加载对话中...",
+  "aiAssistant": "AI助手"
 } 
