添加后端 AI 生成与提示词管理需求文档，定义场景摘要互转功能及用户提示词管理

--- a/需求文档/前端详细设计文档.(小说列表模块,编辑器模块).md
+++ b/需求文档/前端详细设计文档.(小说列表模块,编辑器模块).md
@@ -23,7 +23,7 @@
 class NovelSummary {
   final String id;
   final String title;
-  final String coverImagePath;
+  final String coverUrl;
   final DateTime lastEditTime;
   final int wordCount;
   final String seriesName;
@@ -32,7 +32,7 @@ class NovelSummary {
   NovelSummary({
     required this.id,
     required this.title,
-    this.coverImagePath = '',
+    this.coverUrl= '',
     required this.lastEditTime,
     this.wordCount = 0,
     this.seriesName = '',
@@ -240,7 +240,7 @@ class NovelRepository {
   ```dart
   // 封面图像懒加载和缓存
   CachedNetworkImage(
-    imageUrl: novel.coverImagePath,
+    imageUrl: novel.coverUrl,
     placeholder: (context, url) => ShimmerPlaceholder(),
     errorWidget: (context, url, error) => DefaultCoverImage(),
     fit: BoxFit.cover,
