--- a/原型图/剧情推演html原型图和需求文档/后端需求.md
+++ b/原型图/剧情推演html原型图和需求文档/后端需求.md
@@ -10,7 +10,7 @@
 
 ## 1. 功能概述
 
-“剧情推演”功能旨在利用 AI 大模型，根据用户当前小说的既有情节（**限定在用户指定的章节范围内**）、设定和用户偏好，生成多个可能的后续剧情大纲（以场景摘要的形式呈现，并附带一个简短标题），供用户选择，以辅助创作构思。用户可以在一个专门的界面（对应前端原型 `next_outline_prototype.html`）**选择上下文的起止章节**，配置生成参数，触发此功能，浏览 AI 生成的多个剧情走向，针对不满意的选项进行单独重新生成（可更换模型），并选择最满意的一个将其作为一个新的章节（使用 AI 生成的标题）和其中的第一个场景（使用大纲作为摘要）整合回小说的整体结构中。
+"剧情推演"功能旨在利用 AI 大模型，根据用户当前小说的既有情节（**限定在用户指定的章节范围内**）、设定和用户偏好，生成多个可能的后续剧情大纲（以场景摘要的形式呈现，并附带一个简短标题），供用户选择，以辅助创作构思。用户可以在一个专门的界面（对应前端原型 `next_outline_prototype.html`）**选择上下文的起止章节**，配置生成参数，触发此功能，浏览 AI 生成的多个剧情走向，针对不满意的选项进行单独重新生成（可更换模型），并选择最满意的一个将其作为一个新的章节（使用 AI 生成的标题）和其中的第一个场景（使用大纲作为摘要）整合回小说的整体结构中。
 
 ## 2. 目标用户
 
@@ -28,7 +28,7 @@
 
 ### 4.1 核心流程
 
-1.  **前端触发 (初始生成):** 用户在“剧情推演”页面配置选项（**选择上下文开始章节ID和结束章节ID**、生成数量、作者偏好等），选择一个或多个 AI 模型配置，点击“生成剧情大纲”按钮。
+1.  **前端触发 (初始生成):** 用户在"剧情推演"页面配置选项（**选择上下文开始章节ID和结束章节ID**、生成数量、作者偏好等），选择一个或多个 AI 模型配置，点击"生成剧情大纲"按钮。
 2.  **后端接收请求 (初始生成):** 后端接收到包含小说 ID、**上下文起止章节ID**、生成参数、用户偏好、所选 AI 配置列表的请求。 (调用 API 4.2.1)
 3.  **上下文准备:**
     * 根据小说 ID 从数据库（MongoDB）中检索相关的 `Novel` 信息（包括基本设定、人物等）。
@@ -39,7 +39,7 @@
     * 聚合小说设定、人物信息、以及提取的场景摘要，形成基础上下文信息。
 4.  **Prompt 构建 (初始生成):**
     * 根据 `AIFeatureType.NEXT_OUTLINE_GENERATION` (需要新增此类型) 查找用户自定义的 `UserPromptTemplate` 或系统默认的 `PromptTemplate`。
-    * 结合基础上下文信息、用户输入的“作者偏好/引导” (`authorGuidance`) 以及 Prompt 模板，为每个选定的 AI 模型构建具体的请求 Prompt。Prompt 应明确指示 AI 同时生成剧情大纲和一个简短的、概括性的标题/标签。
+    * 结合基础上下文信息、用户输入的"作者偏好/引导" (`authorGuidance`) 以及 Prompt 模板，为每个选定的 AI 模型构建具体的请求 Prompt。Prompt 应明确指示 AI 同时生成剧情大纲和一个简短的、概括性的标题/标签。
 5.  **并发 AI 请求 (初始生成):**
     * 利用配置的虚拟线程池 (`VirtualThreadTaskExecutor`)，为用户选择的每个 AI 模型配置 (`UserAIModelConfig`) 并发地发起 AI 生成请求。
     * 请求的目标是让每个 AI 模型根据提供的 Prompt 生成一个剧情大纲（场景摘要）以及一个对应的短标题。每个请求应期望返回一个独立的剧情选项，并分配一个唯一的 `optionId`。
@@ -49,9 +49,9 @@
     * 每个推送的事件应包含 `optionId`（用于唯一标识该选项）、生成的短标题 (`optionTitle`) 和生成的文本片段 (`textChunk`)。标题可以在第一个 chunk 中发送，或者作为一个单独的 SSE 事件发送。
 7.  **前端展示:** 前端接收 SSE 事件，在对应的竖栏中以打字机效果展示生成的剧情大纲及其标题。每个选项卡片下方应包含重新生成该选项的控件（如刷新按钮、可选的模型列表）。
 8.  **用户交互 (重新生成/提示):**
-    * **重新生成 (全局):** 用户点击全局的“重新生成”按钮，前端发送与初始请求类似的 API 请求 (调用 API 4.2.1，**使用相同的起止章节ID**)，后端重复步骤 3-6，生成一套全新的选项。
-    * **提供提示并重试 (全局):** 用户输入全局提示信息，点击“提供提示并重试”按钮，前端将新的提示信息连同原始请求参数（**包括相同的起止章节ID**）一起发送给后端 (调用 API 4.2.1，在 `regenerateHint` 字段传入提示)，后端在步骤 4 构建 Prompt 时纳入考虑，然后重复步骤 5-6，生成一套全新的选项。
-    * **重新生成 (单个选项):** 用户在某个剧情选项卡片上点击“刷新”按钮，或选择了新的 AI 模型后触发重新生成。前端发送 **针对该特定选项** 的重新生成请求 (调用 API 4.2.2)，需要携带 `novelId`、要重新生成的 `optionId`、以及用户新选择的 `UserAIModelConfig` ID（如果更换了模型）和可能的额外提示。
+    * **重新生成 (全局):** 用户点击全局的"重新生成"按钮，前端发送与初始请求类似的 API 请求 (调用 API 4.2.1，**使用相同的起止章节ID**)，后端重复步骤 3-6，生成一套全新的选项。
+    * **提供提示并重试 (全局):** 用户输入全局提示信息，点击"提供提示并重试"按钮，前端将新的提示信息连同原始请求参数（**包括相同的起止章节ID**）一起发送给后端 (调用 API 4.2.1，在 `regenerateHint` 字段传入提示)，后端在步骤 4 构建 Prompt 时纳入考虑，然后重复步骤 5-6，生成一套全新的选项。
+    * **重新生成 (单个选项):** 用户在某个剧情选项卡片上点击"刷新"按钮，或选择了新的 AI 模型后触发重新生成。前端发送 **针对该特定选项** 的重新生成请求 (调用 API 4.2.2)，需要携带 `novelId`、要重新生成的 `optionId`、以及用户新选择的 `UserAIModelConfig` ID（如果更换了模型）和可能的额外提示。
 9.  **后端处理 (单个选项重新生成):**
     * 后端接收到单个选项重新生成的请求 (API 4.2.2)。
     * **获取原始上下文:** 需要获取该 `optionId` 对应的 **初始生成请求所使用的上下文**（基于原始的 `startChapterId` 和 `endChapterId`）。这可以通过缓存或重新查询实现。
@@ -63,7 +63,7 @@
     * **创建新章节:** 在 `Novel` 结构中，紧随 **上下文结束章节 (`endChapterId`)** 之后（或根据 `precedingChapterId` 参数指定的位置），创建一个新的章节，章节标题使用 AI 生成并由用户选中的 `selectedOutlineTitle`。
     * **创建新场景:** 在新创建的章节下，创建一个新的 `Scene` 对象。
     * **填充场景摘要:** 将选中的大纲内容 (`selectedOutlineContent`) 填充到新 `Scene` 的 `summary` 字段。
-    * **设置场景标题:** 新 `Scene` 的标题可以默认为 "场景 1" 或复用章节标题，或留空由用户后续编辑 (需要明确)。
+    * **设置场景标题:** 新 `Scene` 的标题默认使用 AI 生成并由用户选中的大纲标题 (`selectedOutlineTitle`)。
     * **设置场景状态:** 可选地设置一个初始状态（如 "待续写"）。
 
 ### 4.2 API 设计
@@ -152,7 +152,7 @@
 (同 v1.2)
 * **`AIFeatureType` (Enum):** 新增 `NEXT_OUTLINE_GENERATION` 枚举值。
 * **`PromptTemplate` / `UserPromptTemplate`:** 需要为此功能设计和添加默认及用户可自定义的模板。模板应包含必要的占位符，如 `{novel_setting}`, `{characters}`, `{previous_summaries}`, `{author_guidance}`, `{regenerate_hint}` 等。需要明确要求 AI 输出标题和大纲。
-* **`Scene`:** 考虑是否需要新增字段来标记该场景是由“剧情推演”功能生成的，或者其初始状态。
+* **`Scene`:** 考虑是否需要新增字段来标记该场景是由"剧情推演"功能生成的，或者其初始状态。
 * **`Chapter`:** (无直接变更，但会通过 API 创建新实例)
 
 ### 4.4 依赖与集成
@@ -203,8 +203,8 @@
 ## 8. 开放问题与待讨论
 
 * **(已明确)** 上下文范围定义: 用户通过 `startChapterId` 和 `endChapterId` 指定范围 (包含边界)。
-* 上下文的最大长度限制是多少？如何处理超长上下文？（截断？摘要的摘要？）
-* **(部分明确)** 保存大纲时，新创建的章节标题使用 AI 生成的标题。但新章节下的第一个场景的 **场景标题** 如何确定？(默认为 "场景 1" 或复用章节标题？还是留空？)
+* 上下文的最大长度限制是多少？如何处理超长上下文？（截断？摘要的摘要？） (当前代码仅在日志中警告超长，未强制处理)
+* **(已明确)** 保存大纲时，新创建的章节标题使用 AI 生成的标题 (`selectedOutlineTitle`)。新章节下的第一个场景的 **场景标题** 也默认使用 `selectedOutlineTitle`。
 * **(已明确)** 单个选项重新生成时，其上下文 (`authorGuidance` 等) 强制继承自初始请求，在此基础上进行优化。
 * **(已明确)** 需要 AI 为每个生成的剧情选项提供一个简短的标题或标签。
 
